# tech-blog-rag

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: ragas-evaluation.md
eval/: faithfulness_custom_results.csv  faithfulness_custom_results.json  questions.json  ragas_results.csv  samples_cache.json
scripts/: evaluate.py  evaluate_faithfulness.py  evaluate_ragas.py  ingest.py  query.py
src/tech_blog_rag/: chunker.py  collector.py  config.py  embedder.py  generator.py  pipeline.py  retriever.py
tests/: conftest.py  test_chunker.py  test_collector.py  test_embedder.py  test_generator.py  test_pipeline.py  test_retriever.py
